5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1759_2543.log
== TEST (2019-05-27 23:38:56) 
-- CODE:
from numpy import *
v1=array(eval(input()))
i=-1
soma=0
while(abs(i)<=size(v1)):
	soma=ix^(abs(i)-1)+soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:06) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v[-1])
b=str(v[-2])+str(x)
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)=<size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
File "XXXX", line 7
    while(abs(i)=<size(v1)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:18) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v[-1])
b=str(v[-2])+str(x)
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<=size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:45) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str(x)
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<=size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:45:10) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<=size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:45:54) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.692113
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:45:56) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:46:20) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:48:41) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:50:41) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.534461
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:50:55) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:51:42) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.437963
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:51:44) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:52:21) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:53:55) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
if(v1[-3]!=0):
	soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.46038
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:53:57) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
if(v1[-3]!=0):
	soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:57:01) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str("")
if(v1[-3]!=0):
	soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.528097
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:03) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str("")
if(v1[-3]!=0):
	soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:58:54) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str("")
if(v1[-3]!=0):
	soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		if(v1[-3]==0):
			soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(soma)
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.458991
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:57) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str("")
if(v1[-3]!=0):
	soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		if(v1[-3]==0):
			soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(soma)
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:59:49) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.453709
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:59:50) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:00:10) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:00:52) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- EXECUTION TIME:
0.591032
-- TEST CASE 1:
---- input:
[30,20,11]

---- correct output:
30x^2 + 20x + 11

---- user output:
30x^2 + 20x + 11
-- TEST CASE 2:
---- input:
[10]

---- correct output:
10

---- user output:

-- TEST CASE 3:
---- input:
[11,50,20,30,2]

---- correct output:
11x^4 + 50x^3 + 20x^2 + 30x + 2

---- user output:
11x^4 + 50x^3 + 20x^2 + 30x + 2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:01:01) 
-- CODE:
from numpy import*
v1=array(eval(input()))
i=-3
a=str(v1[-1])
b=str(v1[-2])+str("x")
soma=str(v1[i])+str("x") +str('^')+str(abs(i)-1)
while(abs(i)<size(v1)):
	i=i-1
	if(v1[i]!=0):
		soma=str(v1[i])+str("x")+str('^')+str(abs(i)-1)+str(" + ") +str(soma)
print(soma,"+",b,"+",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
